# jlab-desktop

./: CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
TODO/: README.md  integrity-check-build-sha256-vs-github-release.md  linux-builds-deb-rpm-appimage.md  multi-uploader-with-local-queue-and-report-page.md  update-api-and-conditional-warning-box.md  watched-folders-auto-scan-native-alerts.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  error.rs  history.rs  lib.rs  paths.rs  windows_aumid.rs
src-tauri/src/watcher/: commands.rs  core.rs  hold.rs  mod.rs  notify.rs  quarantine.rs  rescan.rs  settings.rs  trash.rs  tray.rs
src/lib/: api.ts  types.ts  usePausableInterval.ts
src/lib/components/: AppFooter.tsx  BrandMark.tsx  DropZone.tsx  ErrorBanner.tsx  FamilyAlert.tsx  HistoryPanel.tsx  IdleDashboard.tsx  InfoBubble.tsx  LogControl.tsx  RemoteStatus.tsx  ScanProgress.tsx  SeverityBadge.tsx  Sha256Chip.tsx  SignatureCard.tsx  SignatureDisclaimer.tsx  SignatureList.tsx  ThirdPartyIntel.tsx  UpdaterButton.tsx  WatcherFirstEnableModal.tsx  WatcherFoldersList.tsx  WatcherIcons.tsx  WatcherPanel.tsx  WatcherSettingsList.tsx  WatcherStatusCard.tsx
