[package]
name = "jlab-desktop"
version = "0.5.3"
description = "Cross-platform desktop client for the JLab static JAR scanner API"
authors = ["JLab Desktop Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/NeikiDev/jlab-desktop"
homepage = "https://jlab.threat.rip/"
readme = "../README.md"
edition = "2021"
rust-version = "1.85"

[lib]
name = "jlab_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls", "json", "gzip", "brotli"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "sync", "time"] }
thiserror = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }
sha2 = "0.11"
log = "0.4"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = { version = "0.5", default-features = false, features = ["macos_fsevent"] }
walkdir = "2"
trash = "5"

# Desktop-only: stop a second JLab process from launching when the user
# clicks the shortcut twice. The callback in `lib.rs` focuses the existing
# window instead. Without this, two processes would both poll
# `watcher-settings.json` and clobber each other's atomic writes.
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

# Windows-only: register our AppUserModelID in HKCU and bind it to the
# current process so the Action Center will actually draw our toasts. See
# `src/windows_aumid.rs` for the why.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Registry", "Win32_UI_Shell", "Win32_Foundation"] }

# Linux-only: drive notifications through `notify-rust` directly (with an
# `on_close()` handle) instead of `tauri-plugin-notification`. The plugin
# calls `let _ = notification.show()` and drops the handle, which on
# GNOME 46+ (Ubuntu 24.04+, Fedora 41+) closes the toast within a few
# milliseconds. See `watcher/notify.rs::show_native` and
# https://github.com/tauri-apps/plugins-workspace/issues/2566.
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
